<resources>
    <string name="app_name">Medicine Reminder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_add">Dodaj lek</string>
    <string name="menu_date_take_med">Termin zażycia leku</string>
    <string name="menu_other_medicines">Pozostałe leki</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_nav">Menu:</string>

    <string name="login_info">Zaloguj się by, by móc korzystać z aplikacji</string>
    <string name="signup_info">Jesteś nowym użytkownikiem? <font fgcolor='#cccc00'>Zarejestruj się!</font> </string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="log_in">Zaloguj</string>
    <string name="log_inf">Posiadasz konto? <font fgcolor='#cccc00'>Zaloguj się </font></string>
    <string name="signup_inf">Nie posiadasz konta? <font fgcolor='#cccc00'>Zarejestruj sie!</font></string>
    <string name="sign_up">Zarejestruj</string>
    <string name="title_activity_sign_up">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="add_medicine">Dodaj lek:</string>
    <string name="chose_medicine">Nazwa: </string>
    <string name="how_many_medicines">Ilość tabletek: </string>
    <string name="date_medicine">Pora dawkowania(h): </string>
    <string name="how_meny_med_one_time">Ilość tabletek jednorazowo: </string>
    <string name="info_date">Powiadomienie o zbliżającej się porze zażycia leku</string>
    <string name="info_end_medicines">Powiadomienie o kończących się lekach</string>
    <string name="take_medicine">Powinieneś spożyć lek: </string>
    <string name="number_of_tablets">Ilość tabletek: </string>
    <string name="date_of_first_use">Data pierwszego zażycia: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string-array name="spinner_numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
</resources>
