<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMedicinesFragment">

    <EditText
        android:id="@+id/medNameET"
        style="@android:style/Widget.Holo.Light.EditText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="394dp"
        android:layout_height="439dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.5"
        android:src="@drawable/output_onlinejpgtools"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/add_medicine"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="30dp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"

        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/chose_medicine"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/how_many_medicines"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/nrOfTabET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nrOfTabET" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="145dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/date_medicine"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/dateMedSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nrOfTabET" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="156dp"
        android:layout_height="61dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/date_of_first_use"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/dateEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dateEditText" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/how_meny_med_one_time"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/medOneTimeET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateMedSpinner" />

    <EditText
        android:id="@+id/nrOfTabET"
        style="@android:style/Widget.Holo.Light.EditText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="20dp"
        android:inputType = "number"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medNameET" />

    <EditText
        android:id="@+id/medOneTimeET"
        style="@android:style/Widget.Holo.Light.EditText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateMedSpinner" />

    <Spinner
        android:id="@+id/dateMedSpinner"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nrOfTabET" />

    <Button
        android:id="@+id/confirmDataMedButton"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/border"
        android:text="Zatwierdź"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/dateEditText"
        style="@android:style/Widget.Holo.Light.EditText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medOneTimeET" />


</android.support.constraint.ConstraintLayout>